[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"  # Ensure this is the latest stable version
sqlx = {  version = "0.8.0", features = [ "postgres", "macros", "tls-rustls",  "chrono",   "runtime-async-std"]}
dotenv = "0.15"
async-std = "1.10" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }  # Ensure this is the latest stable version
chrono = { version = "0.4", features = ["serde"] }
